# Low-Cost-Sensors

./: .gitignore  .gitmodules  LICENSE  README.md  esp32_sensor_log.csv  index.html  install.sh  install_sdk.sh  launch_system.sh  low-cost-sensors.service  pullToExcel.py  runNodes.sh  runOnBoot.sh
Docker/: .dockerignore  .env  Dockerfile  UserConfig.txt  dockerCommands.sh  run.sh
Docker/catkin_ws/drone_data/: CMakeLists.txt  package.xml
Docker/catkin_ws/drone_data/src/: data_publisher.cpp
DroneESP32/: platformio.ini
DroneESP32/include/: CH4.h  K30.h  OLED.h  PM25.h
DroneESP32/src/: OLED.cpp  main.cpp  test.cpp
Drone_System/include/: SGP.h
Drone_System/src/: K30.cpp  main.cpp
GroundStation/GroundESP32/src/: main.cpp
Ground_Station_Reader/: index.html
Ground_Station_Reader/Ground Station/: .gitignore
Ground_Station_Reader/Ground Station/include/: dashboard.h
Ground_Station_Reader/Ground Station/src/: main.cpp
Mechanical/STEP Files/: Cover.step  Drone Clip Left.step  Drone Clip Right.step
Mechanical/STL Files/: Cover.stl  Drone Clip Left.stl  Drone Clip Right.stl
ParserPi/: CMakeLists.txt  boot.service
ParserPi/src/: main.cpp
Parser_Pi/: CMakeLists.txt  boot.service  installService.sh
Parser_Pi/src/: main.cpp
PlatformIO/: platformio.ini
PlatformIO/include/: dashboard.h
PlatformIO/src/: CO.cpp  OLED.cpp  PM25.cpp  main.cpp  sender.cpp
ROS1_OSDK_Docker/: Dockerfile  launch_osdk.sh
ROS1_OSDK_Docker/UART_Forwarder/: package.xml
ROS1_OSDK_Docker/UART_Forwarder/scripts/: UART_Forwarder.py
RaspDocker/: .dockerignore  Dockerfile  UserConfig.txt  openNode.sh  run.bash  run.sh  run_sample.sh
RaspDocker/catkin_ws/src/dji_osdk_ros/: CMakeLists.txt
RaspDocker/catkin_ws/src/drone_data/: CMakeLists.txt
bash_scripts/: install_program.sh  install_ros_packages.sh  sensor_system.service  start_sensor_system.sh
drone_esp32/include/: CO.h  Temp.h
drone_esp32/src/: NOx.cpp  main.cpp
drone_esp32/test/: memoryaddI2C.cpp
ground_station/GroundESP32/src/: main.cpp
ground_station/ground_esp32/src/: main.cpp
mechanical/stepFiles/: Main Case.step
mechanical/step_files/: Drone Clip Left.step  Pi Case Bottom.step  main_casev3.step  rpi3_bottom_casev3.step
mechanical/stlFiles/: Drone Clip Right.form  Main Case.stl  Pi Case Bottom.stl
mechanical/stl_files/: Drone Clip Left.form  Drone Clip Left.stl  Drone Clip Right.stl
parser/: CMakeLists.txt  boot.service  compile.sh  main  main.cpp  runOnBoot.sh
platformio/: README.md  platformio.ini
platformio/include/: NOx.h  OLED.h  PM25.h  Temp.h  dashboard.h  keyestudio(broken).h
platformio/lib/: K30_I2C.cpp  K30_I2C.h
platformio/src/: CH4.cpp  CO.cpp  CO.h  K30.cpp  LCD.cpp  LCD.h  NOx.cpp  OLED.cpp  PM25.cpp  Temp.cpp  keyestudio(broken).cpp  main.cpp  memoryaddI2C.cpp
platformio/test/: index.html
rosWorkspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
rosWorkspace/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  (+2 more)
rosWorkspace/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr
rosWorkspace/logs/gps_node_pi/: build.cmake.000.log.stderr
rosWorkspace/src/ROStoRaw/: CMakeLists.txt  README.md  package.xml
rosWorkspace/src/ROStoRaw/include/: dataProcessor.h
rosWorkspace/src/ROStoRaw/launch/: basicSystem.launch  complete_system.launch  dataProcessor.launch  data_processor.launch  masterSystem.launch
rosWorkspace/src/ROStoRaw/src/: dataProcessor.cpp
rosWorkspace/src/gpsNodePi/: CMakeLists.txt  package.xml
rosWorkspace/src/gps_node_pi/: CMakeLists.txt  package.xml
ros_workspace/src/gps_node_pi/: CMakeLists.txt  package.xml
ros_workspace/src/ros_to_serial/: CMakeLists.txt  package.xml
ros_workspace/src/ros_to_serial/launch/: master_system.launch
ros_workspace/src/ros_to_serial/src/: data_processor.cpp
ros_workspace/src/sensor_monitor/: CMakeLists.txt  package.xml
ros_workspace/src/sensor_monitor/launch/: full_system.launch
serial_scanner/src/: main.cpp
src/: main.cpp
(+23 files in other folders)
