<package format="2">
  <name>UART_Forwarder</name>
  <version>0.0.1</version>
  <description>Forwards GPS over UART</description>
  <maintainer email="shivam@example.com">Shivam</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>