<?xml version="1.0"?>
<package format="2">
  <name>drone_data</name>
  <version>0.0.0</version>
  <description>Drone data publisher</description>
  <maintainer email="shivamwalia2006@gmail.com">Shivam Walia</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>