<?xml version="1.0"?>
<package format="2">
  <name>sensor_monitor</name>
  <version>0.0.1</version>
  <description>The sensor_monitor package</description>
  <maintainer email="shivamwalia2006@gmail.com">Shivam Walia</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
  </export>
</package>